# scim-ai

./: LICENSE  README.md  scim-ai.code-workspace
.github/: copilot-instructions.md
agent/: .gitignore  README.md  init-agent-environment.sh  pyproject.toml
agent/libraries/agents/: README.md
agent/libraries/agents/connection/sql/: pyproject.toml
agent/libraries/agents/connection/sql/src/scimaiagentsconnectionsql/: sql_agent.py
agent/libraries/agents/connection/sql/tests/: test_schema_discovery.py  test_scim_user_inference.py
agent/libraries/agents/server/: pyproject.toml
agent/libraries/agents/server/java/: pyproject.toml
agent/libraries/agents/server/java/src/scimaiagentsserverjava/: connect_sql_database.py
agent/libraries/agents/server/java/src/scimaiagentsserverjava/tools/: add_sql_connection.py  build_server.py  save_sql_group_service.py  start_server.py
agent/libraries/agents/server/java/tests/: test_tool_add_sql_connection.py  test_tool_build_server.py  test_tool_start_server.py
agent/libraries/agents/server/src/server/: connect_sql_database.py
agent/libraries/agents/server/src/server/tools/: build_server.py  start_server.py
agent/libraries/common/: pyproject.toml
agent/libraries/common/src/scimaicommon/: instrument.py  model.py  scimexampleobjects.py
agent/libraries/common/tests/: test_examples.py
agent/libraries/tools/: pyproject.toml
agent/libraries/tools/src/scimaitools/: sql_read_schema.py
examples/: docker-compose.yml  init-examples-environment.sh  test_tool_add_sql_connection.py
examples/pgadmin/: Dockerfile  servers.json
examples/pheonix/schema/: init-db.sql
examples/postgres/: Dockerfile
examples/vanilla-ecommerce/: Dockerfile
examples/vanilla-ecommerce/schema/: init-db.sql  init-schema.sql  init-seed-data.sql
server/: .gitignore  README.md  app.yaml  build.sh  generate.sh  init-java-server-environment.sh  pom.xml  start.sh
server/.devcontainer/: Dockerfile  devcontainer.json  settings.json
server/src/main/java/com/scim/ai/server/: BulkResource.java  GroupResource.java  ResourceTypeResource.java  SchemaResource.java  ServiceConfigResource.java  UserResource.java  package-info.java
server/src/main/java/com/scim/ai/server/filter/: ScimFilter.java  ScimFilterParser.java
server/src/main/java/com/scim/ai/server/model/: Meta.java  ResourceType.java  ScimBulkRequest.java  ScimError.java  ScimGroup.java  ScimListResponse.java  ScimPatchOperation.java  ScimUser.java  ServiceProviderConfig.java
server/src/main/java/com/scim/ai/server/persistence/: GroupPersistenceService.java  Profile.java  User.java  UserPersistenceService.java
server/src/main/java/com/scim/ai/server/service/: ConnectedDbListResult.java  (+9 more)
server/src/main/resources/: application.yaml  hibernate.properties  logging.properties
server/src/test/java/com/ai/server/filter/: ScimFilterParserTest.java
