[project]
name = "scimaitools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "macyabbey", email = "macy.abbey@gmail.com" }
]
requires-python = ">=3.12.8"
dependencies = []
tool.uv.package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scimaitools"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]