[project]
name = "scimaiagentsserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "macyabbey", email = "macy.abbey@gmail.com" }
]
requires-python = ">=3.12.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
